--- a/puzzle/css01.css
+++ b/puzzle/css01.css
@@ -69,6 +69,7 @@ body {
   padding: 10px;
   color: white;
   font-size: 30px;
+  font-family: "Heiti SC", "STHeiti", sans-serif，Helvetica;
 	font-weight: bolder;
 	letter-spacing: 2px;
 	text-align: center;
