--- a/puzzle/css01.css
+++ b/puzzle/css01.css
@@ -3,7 +3,7 @@
     src: url('hanyijielongtaohuayuan.ttf') format('truetype');
 }
 body {
-	background-image: url('炸鸡.jpg');
+	background-image: url('炸鸡动态.gif');
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-color: #6c0002;
